--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,13 +10,13 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <%= button_to "Edit", edit_post_path(@post), class:"button" %>
+          <%= button_to "Edit", edit_post_path(@post), class: "button" %>
         </p>
         <p class="level-item">
           <%= button_to "Delete", post_path(@post),
-                      method: :delete,
-                      data: { confirm: "Are you sure?" },
-                      class:"button is-danger" %>
+                        method: :delete,
+                        data: { confirm: "Are you sure?" },
+                        class: "button is-danger" %>
         </p>
       </div>
     </nav>
@@ -28,14 +28,16 @@
   </div>
 </section>
 
-<section class="section comments">
-  <div class="container">
-    <h2 class="subtitle is-5"><strong><%= @post.comments.count %></strong> Comments</h2>
-    <%= render @post.comments %>
-    <div class="comment-form">
-      <hr />
-      <h3 class="subtitle is-3">Leave a reply</h3>
-      <%= render 'comments/form' %>
+<% if @post.comments %>
+  <section class="section comments">
+    <div class="container">
+      <h2 class="subtitle is-5"><strong><%= @post.comments.count %></strong> Comments</h2>
+      <%= render @post.comments %>
+      <div class="comment-form">
+        <hr/>
+        <h3 class="subtitle is-3">Leave a reply</h3>
+        <%= render 'comments/form' %>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+<% end %>
