change layout tamplete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,33 +10,57 @@
 
 <body>
 
-<section class="hero is-primary is-medium">
+<section class="hero is-info is-large">
   <div class="hero-head">
     <nav class="navbar">
       <div class="container">
         <div class="navbar-brand">
-          <%= link_to 'Demo Blog', root_path, class: "navbar-item" %>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroA">
-	            <span></span>
-	            <span></span>
-	            <span></span>
-	          </span>
+          <%= link_to 'My Blog', root_path, class: "navbar-item" %>
+          <a class="navbar-item">
+<!--            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">-->
+          </a>
+          <span class="navbar-burger" data-target="navbarMenuHeroB">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
         </div>
-        <div id="navbarMenuHeroA" class="navbar-menu">
+        <div id="navbarMenuHeroB" class="navbar-menu">
           <div class="navbar-end">
             <%= link_to "Create New Post", new_post_path, class:"navbar-item" %>
+            <a class="navbar-item is-active">
+              Posts
+            </a>
+            <a class="navbar-item">
+              Comments
+            </a>
+            <a class="navbar-item">
+              Members
+            </a>
           </div>
         </div>
       </div>
     </nav>
   </div>
 
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title">
-        <%= yield :page_title %>
-      </h1>
-    </div>
+  <div class="hero-foot">
+    <nav class="tabs is-boxed is-fullwidth">
+      <div class="container">
+        <ul>
+          <li class="is-active">
+            <a>Posts</a>
+          </li>
+          <li>
+            <a>
+              <%= link_to @comment %>Comments
+            </a>
+          </li>
+          <li>
+            <a>Members</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </div>
 </section>
 <%= yield %>
