--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <%= button_to "Edit", edit_post_path(@post), class: "button" %>
+          <%= link_to "Edit", edit_post_path(@post), class: "button" %>
         </p>
         <p class="level-item">
           <%= button_to "Delete", post_path(@post),
