--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,7 @@
       <div class="container">
         <div class="navbar-brand">
           <%= link_to 'My Blog', root_path, class: "navbar-item" %>
-          <a class="navbar-item">
-<!--            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">-->
-          </a>
+          <a class="navbar-item"></a>
           <span class="navbar-burger" data-target="navbarMenuHeroB">
             <span></span>
             <span></span>
@@ -51,9 +49,7 @@
             <a>Posts</a>
           </li>
           <li>
-            <a>
-              <%= link_to @comment %>Comments
-            </a>
+            <a>Comments</a>
           </li>
           <li>
             <a>Members</a>
